// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Recruitment service [GET] /recruitments Should return list of user's recruitments 1`] = `
{
  "id": Any<String>,
  "jobOffer": {
    "company": {
      "name": "Google",
    },
    "createdAt": Any<String>,
    "employmentType": "b2b",
    "level": "senior",
    "position": "Senior Web Developer",
    "salaryCurrency": "pln",
    "salaryFrom": 25000,
    "salaryTo": 30000,
    "workType": "full_time",
  },
}
`;

exports[`Recruitment service [GET] /recruitments/:id Should return recruitment 1`] = `
{
  "application": {
    "createdAt": Any<String>,
    "cv": null,
    "introduction": "Hello Google, I want to work for you",
    "jobOffer": {
      "company": {
        "avatarUrl": null,
        "backgroundUrl": null,
        "description": null,
        "name": "Google",
        "phoneNumber": "222 222 2222",
      },
      "createdAt": Any<String>,
      "description": "",
      "employmentType": "b2b",
      "level": "senior",
      "position": "Senior Web Developer",
      "salaryCurrency": "pln",
      "salaryFrom": 25000,
      "salaryTo": 30000,
      "workType": "full_time",
    },
    "user": {
      "avatar": null,
      "email": "jon.snow@gmail.com",
      "firstName": "Jon",
      "lastName": "Snow",
      "username": null,
    },
  },
  "chatId": Any<String>,
  "id": Any<String>,
}
`;
